# bitbybit-datathon-triathlon

./: .gitignore  BitByBit_FinalNotebook.ipynb  Data_Preprocessing_Document.md  README.md  demo_video_link.txt  features_task1.py  features_task2.py  main.py  models_task1.py  pyproject.toml  time_utils.py  train_task2.py
code/: README.md  pyproject.toml  requirements.txt
code/notebooks/: 01_quick_eda.ipynb
code/scripts/: make_submission.py  run_unix.sh  run_windows.ps1
code/src/: baselines.py  features_task1.py  features_task2.py  io_safe.py  models_task1.py  models_task2.py  paths.py  predict_task1.py  predict_task2.py  preprocessing.py  time_utils.py  train_task1.py  train_task2.py
docs/: ASSUMPTIONS.md  DATASET_LINKS.txt  EVALUATION_AND_RULES.md
reports/: REPORT_TEMPLATE.md
